# agentic-browser

./: .gitignore  README.md  app.py  pyproject.toml
agents/: __init__.py  autogen_tools.py  selector_chat_manager.py
playwright_helper/: __init__.py  dom_parser.js  playwright_manager.py
